# devolv-commit

./: .coverage  .gitignore  LICENSE  pyproject.toml
devolv_commit/: cli.py  core.py  utils.py
tests/: test_cli.py  test_core.py  test_utils.py
